# RedsCore

./: CMakeLists.txt
cmake/: dependencies.cmake
include/: bcdec.h
include/platform/: app_state.h  archive.h  archive_manager.h  gltf_helper.h  logger.h  texture.h  texture_ops.h
include/platform/buffer/: buffer.h
include/platform/file/: file.h  file_buffer.h  memory_buffer.h
include/redscore/: int_def.h
include/redscore/platform/: app_state.h  archive.h  archive_manager.h  gltf_helper.h  logger.h  texture.h  texture_ops.h
include/redscore/platform/buffer/: buffer.h
include/redscore/platform/file/: file.h  file_buffer.h  memory_buffer.h  memory_file.h  native_file.h
include/redscore/platform/texture/: texture.h  texture_ops.h
include/redscore/platform/texture/writers/: dds_writer.hpp
include/redscore/utils/: common.h  compression.hpp  memory_debugger.h  memory_profiling.h  memory_tracker.h  png.hpp  simple_fileio.h
include/utils/: common.h
src/: ToolRunner.cpp  stb.cpp
src/platform/: app_state.cpp  archive.cpp  archive_manager.cpp  gltf_helper.cpp  logger.cpp  texture.cpp  texture_ops.cpp
src/platform/file/: file.cpp  memory_file.cpp  native_file.cpp
src/platform/texture/: texture.cpp  texture_ops.cpp
src/platform/texture/writers/: dds_writer.cpp
src/utils/: common.cpp  compression.cpp  memory_debugger.cpp  simple_fileio.cpp
